# chip8

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
examples/: add.hex  hello.as8  hello.hex  langton.as8  space.as8  space.hex  timer.hex
man/: Makefile.am  asm8.1
src/: Makefile  Makefile.am  asm8.c  asm8.h  chip8.c  chip8.h  dis8.c  disassemble.c  disassemble.h  dump8.c  encode.c  encode.h  fsm.c  fsm.h  instructions.c  instructions.h  main.c  txt2hex.c
